--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
+  "icon": "media/icon.png",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
