feat: Continue the code based on the provided comment & send message without editor

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pacar-ai",
   "displayName": "pacar-ai",
   "description": "Pacar AI is a chat extension with an assistant designed to help you while programming. You can roleplay with this assistant, making your coding sessions more enjoyable and interactive. Imagine having an AI Girlfriend who not only assists you with coding but also keeps you company during those long programming marathons. She can provide emotional support, share a laugh, and even offer smart insights to help you solve complex problems. With Pacar AI, you're never coding alone. Ready to code with a twist of companionship? 🌟💻💕",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "publisher": "PacarAI",
   "repository": {
     "type": "git",
@@ -45,12 +45,25 @@
       {
         "command": "pacar-ai.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "pacar-ai.applyCode",
+        "title": "Apply Code Completion"
+      },
+      {
+        "command": "pacar-ai.triggerTab",
+        "title": "Trigger Tab for Code Completion"
       }
     ],
     "keybindings": [
       {
         "command": "pacar-ai.triggerCompletion",
         "key": "enter",
+        "when": "editorTextFocus"
+      },
+      {
+        "key": "tab",
+        "command": "pacar-ai.triggerTab",
         "when": "editorTextFocus"
       }
     ]
