--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pacar-ai",
   "displayName": "pacar-ai",
-  "description": "Pacar AI is a chat extension with an assistant designed to help you while programming. You can roleplay with this assistant, making your coding sessions more enjoyable and interactive. Imagine having an AI Girlfriend who not only assists you with coding but also keeps you company during those long programming marathons. She can provide emotional support, share a laugh, and even offer smart insights to help you solve complex problems. With Pacar AI, you're never coding alone. Ready to code with a twist of companionship? 🌟💻💕",
+  "description": "Pacar AI** is a chat extension that assists you while programming. With this AI companion, you can enjoy roleplaying, emotional support, and smart insights to enhance your coding sessions. Never code alone again—experience coding with a touch of companionship! 🌟💻💕",
   "version": "1.2.0",
   "publisher": "PacarAI",
   "repository": {
