--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pacar-ai",
   "displayName": "pacar-ai",
   "description": "Pacar AI** is a chat extension that assists you while programming. With this AI companion, you can enjoy roleplaying, emotional support, and smart insights to enhance your coding sessions. Never code alone again—experience coding with a touch of companionship! 🌟💻💕",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "publisher": "PacarAI",
   "repository": {
     "type": "git",
@@ -58,7 +58,7 @@
     "keybindings": [
       {
         "command": "pacar-ai.triggerCompletion",
-        "key": "enter",
+        "key": "ctrl+enter",
         "when": "editorTextFocus"
       },
       {
